Closed
Bug 1458258
Opened 3 years ago
Closed 3 years ago
Switching away from GeckoView and back again results in black screen
Categories
(Core :: Graphics: Layers, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla62
People
(Reporter: snorp, Assigned: snorp)
Details
(Whiteboard: [geckoview:e10s] [geckoview:klar:p1] [geckoview:fenix] )
Attachments
(1 file)
STR 1) Start GeckoViewExample 2) Wait for page to load 3) Hit the home button 4) Switch back to GeckoViewExample 5) Observe black screen, which is resolved if you touch This doesn't happen in Fennec or in GeckoViewExample without e10s.
Assignee | ||
Comment 1•3 years ago
|
||
I've determined that this is caused by CompositorBridgeParent::Invalidate() passing an empty region to LayerManager::AddInvalidRegion().
Component: GeckoView → Graphics: Layers
Product: Firefox for Android → Core
Version: Firefox 59 → 59 Branch
Updated•3 years ago
|
OS: Unspecified → Android
Comment hidden (mozreview-request) |
Assignee | ||
Comment 3•3 years ago
|
||
Kats if there is someone better for this review, feel free to redirect. Also, I am not at all sure why this patch is required, as GetLocalVisibleRegion() seems to be the thing that gets used pretty much everywhere. It does seem to work in both e10s and non, however.
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → snorp
Updated•3 years ago
|
Attachment #8972431 -
Flags: review?(bugmail) → review?(matt.woodrow)
Comment 4•3 years ago
|
||
mozreview-review |
Comment on attachment 8972431 [details] Bug 1458258 - Fix compositor invalidatation after resume with e10s https://reviewboard.mozilla.org/r/241030/#review246836 ::: commit-message-d3643:1 (Diff revision 1) > +Bug 1458258 - Fix compositor invalidatation after resume with e10s r=kats Matt would be a better reviewer. Also you have a typo "invalidation"
Comment 5•3 years ago
|
||
mozreview-review |
Comment on attachment 8972431 [details] Bug 1458258 - Fix compositor invalidatation after resume with e10s https://reviewboard.mozilla.org/r/241030/#review246982 The normal visible region is what layout computed, the shadow visible region is that, plus takes into account any async changes (like APZ, async transform animations). I don't really understand why this is needed, I guess we recomputed the shadow visible to be empty, but I'm not sure why. Can we just instead just add HostLayerManager::InvalidateAll? For both impls, I think we can just use mRenderBounds and set the invalid region to that. I think that makes the intent a bit clearer.
Assignee | ||
Updated•3 years ago
|
Priority: -- → P1
Updated•3 years ago
|
status-firefox59:
--- → wontfix
status-firefox60:
--- → wontfix
status-firefox61:
--- → fix-optional
status-firefox-esr52:
--- → wontfix
status-firefox-esr60:
--- → wontfix
Updated•3 years ago
|
Whiteboard: [geckoview:e10s] [geckoview:klar] → [geckoview:e10s] [geckoview:klar] [geckoview:fenix]
Updated•3 years ago
|
status-firefox62:
--- → affected
Whiteboard: [geckoview:e10s] [geckoview:klar] [geckoview:fenix] → [geckoview:e10s] [geckoview:klar:p1] [geckoview:fenix]
Comment hidden (mozreview-request) |
Assignee | ||
Comment 7•3 years ago
|
||
Matt I updated the patch but not sure if you got a notification, so NI here.
Flags: needinfo?(matt.woodrow)
Comment 8•3 years ago
|
||
mozreview-review |
Comment on attachment 8972431 [details] Bug 1458258 - Fix compositor invalidatation after resume with e10s https://reviewboard.mozilla.org/r/241030/#review249852
Attachment #8972431 -
Flags: review?(matt.woodrow) → review+
Comment 9•3 years ago
|
||
(In reply to James Willcox (:snorp) (jwillcox@mozilla.com) from comment #7) > Matt I updated the patch but not sure if you got a notification, so NI here. I indeed missed it, thanks for the reminder!
Flags: needinfo?(matt.woodrow)
Comment 10•3 years ago
|
||
Pushed by jwillcox@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b51a237fe66d Fix compositor invalidatation after resume with e10s r=mattwoodrow
Comment 11•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/b51a237fe66d
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
Updated•3 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•