Bug 1458258 - Fix compositor invalidatation after resume with e10s r=mattwoodrow

MozReview-Commit-ID: CAZCUXSa9WZ